RESOLVED FIXED153012
Fix unused-private-field warnings in DisplayListItems.h
https://bugs.webkit.org/show_bug.cgi?id=153012
Summary Fix unused-private-field warnings in DisplayListItems.h
Csaba Osztrogonác
Reported 2016-01-12 07:22:19 PST
../../Source/WebCore/platform/graphics/displaylists/DisplayListItems.h:684:23: warning: private field 'm_op' is not used [-Wunused-private-field] CompositeOperator m_op; ^ ../../Source/WebCore/platform/graphics/displaylists/DisplayListItems.h:685:15: warning: private field 'm_blendMode' is not used [-Wunused-private-field] BlendMode m_blendMode; ^ 2 warnings generated.
Attachments
Patch (2.27 KB, patch)
2016-01-12 07:32 PST, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2016-01-12 07:32:19 PST
WebKit Commit Bot
Comment 2 2016-01-12 08:47:29 PST
Comment on attachment 268767 [details] Patch Clearing flags on attachment: 268767 Committed r194892: <http://trac.webkit.org/changeset/194892>
WebKit Commit Bot
Comment 3 2016-01-12 08:47:32 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.