Fix unused-private-field warnings in DisplayListItems.h https://bugs.webkit.org/show_bug.cgi?id=153012

Reviewed by Michael Catanzaro.

* platform/graphics/displaylists/DisplayListItems.cpp:
(WebCore::DisplayList::DrawNativeImage::DrawNativeImage):
* platform/graphics/displaylists/DisplayListItems.h:


Canonical link: https://commits.webkit.org/171096@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194892 268f45cc-cd09-0410-ab3c-d52691b4dbfc